# gravitational_wave_toy

./: .gitignore  README.md  gammapy-sensitivity.md  gw_settings.yaml  gw_toy.ipynb  integrating_v2.ipynb  math.md  plot_settings.yaml  pyproject.toml  reading_v2.ipynb  setup.py
.github/workflows/: ci.yml
CTA_sensitivity/grbsens_output_v1_July_2020/: README.md  grbsens-5.0sigma_t1s-t16384s_irf-North_z20_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-North_z40_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-North_z60_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-South_z20_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-South_z40_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-South_z60_0.5h.txt
CTA_sensitivity/grbsens_output_v2_May_2021/: grbsens-5.0sigma_t1s-t16384s_irf-North_z20_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-North_z40_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-North_z60_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-South_z20_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-South_z40_0.5h.txt  grbsens-5.0sigma_t1s-t16384s_irf-South_z60_0.5h.txt  grbsens_output-v2.md
CTA_sensitivity/grbsens_output_v3_Sep_2022/: README.md  grbsens_output-v3.md
config/: gw_settings.yaml  plot_settings.yaml
docs/: astro.config.mjs
gravitational_wave_toy/: GWPlotter.py  GWToy.py  GWToyV2.py  GWToyV3.py  GWToyV4.py  GWToyV5.py  autoplotter.py  ctairf.py  ctaoirf.py  followup.py  gw_settings.yaml  gwobserve.py  gwplot.py  logging.py  main.py  observe.py  plot.py  plot_settings.yaml  sensitivity.py  source.py  util.py
notebooks/: IRFs.ipynb  integrating_v2.ipynb  reading_O5.ipynb  reading_v2.ipynb  reading_v3.ipynb  slopes.ipynb  wavefier.ipynb  wavefier_gw.csv  wavefier_gw_60s.csv
tests/: conftest.py  test_ctairf.py  test_ctaoirf.py  test_followup.py  test_logging.py  test_plot.py  test_sensitivity.py  test_source.py  test_util.py
(+42 files in other folders)
