[tool.poetry]
name = "gw_toy"
version = "2.0"
description = ""
authors = ["Jarred Green <jgreen@mpp.mpg.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.0"
numpy = "^1.23.3"
scipy = "^1.9.1"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
astropy = "^5.1"
dask = {extras = ["complete"], version = "^2023.2.0"}
tqdm = "^4.64.1"
pyarrow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.0.2"
ipython = "^7.19.0"
ipykernel = "^5.5.3"
jupyterlab = "^3.0.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
