[tool.poetry]
name = "gravitational-wave-toy"
version = "3.0.0"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
astropy = "^5.0"
dask = "^2023.12.0"
tqdm = "^4.66.1"
pyarrow = "^14.0.1"
gammapy = "^1.1"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
ipykernel = "^6.27.1"
jupyterlab = "^4.0.9"
pymongo = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
