[project]
name = "gravitational-wave-toy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=6.0",
    "matplotlib>=3.8,<3.10",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.0",
    "tqdm>=4.67.1",
    "gammapy @ git+https://github.com/gammapy/gammapy.git@v1.2",
    "pyarrow>=21.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
